# eval-result-audit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/eval_result_audit/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_eval_result_audit.py
